--- a/src/main/resources/myjdbc/user.properties
+++ b/src/main/resources/myjdbc/user.properties
@@ -1,3 +1,9 @@
 queryUserByName=select * from t_user where name = ?
 queryUserByName.parametertype=com.mcoding.bee.biz.user.User
 queryUserByName.resultclassname=com.mcoding.bee.biz.user.User
+
+
+queryUserByNameAndAge=select * from t_user where name = ? and age = ?
+queryUserByNameAndAge.columnnames=name,age
+queryUserByNameAndAge.parametertype=com.mcoding.bee.biz.user.User
+queryUserByNameAndAge.resultclassname=com.mcoding.bee.biz.user.User
